--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,21 +36,35 @@ dependencies:
   cupertino_icons: ^1.0.2
   # 屏幕适配
   flutter_screenutil: ^5.7.0
+  # 网络请求
   dio: ^5.0.1
+  # 加密
   encrypt: ^5.0.1
+  # 状态管理
   provider: ^6.0.5
+  # 路由管理
   go_router: ^6.2.0
+  # 路由切换动画
   page_animation_transition: ^0.0.9
+  # json序列化
   json_annotation: ^4.5.0
+  # toast弹窗
   cherry_toast: ^1.1.0
+  # 加载动画
   flutter_easyloading: ^3.0.5
   # shared_preferences: ^2.0.18
+  # 本地存储
   sp_util: ^2.0.3
   flukit: ^3.0.1
   # mobile_scanner: ^3.0.0
   # qr_code_scanner: ^1.0.1
+  # 轮播图
   card_swiper: ^2.0.4
   flutter_page_indicator: ^0.0.3
+  # lottie动画
+  lottie: ^2.3.0
+  # rive动画
+  rive: ^0.10.3
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +92,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/index/
+    - assets/lottie/
+    - assets/rive/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
