--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # 开屏页
+  flutter_native_splash: ^2.2.19
   # 屏幕适配
   flutter_screenutil: ^5.7.0
   # 网络请求
