--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,5 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
+android.overridePathCheck=true
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.0.2-all.zip
