feat: sliver 页面

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   # 扫码
   mobile_scanner: ^3.1.1
   # flutter_scankit: ^1.2.4
+  # 下拉刷新
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
