--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   # 开屏页
   flutter_native_splash: ^2.2.19
+  # 启动图标
+  flutter_launcher_icons: ^0.12.0
   # 屏幕适配
   flutter_screenutil: ^5.7.0
   # 网络请求
@@ -71,6 +73,8 @@ dependencies:
   # flutter_scankit: ^1.2.4
   # 下拉刷新
   pull_to_refresh: ^2.0.0
+  # 图片选择
+  wechat_assets_picker: ^8.4.1
 
 dev_dependencies:
   flutter_test:
