--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="com.apptreesoftware.barcodescan.BarcodeScannerActivity"
+          android:screenOrientation="sensorPortrait"
+          android:stateNotNeeded="true"
+          android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
@@ -33,6 +37,8 @@
             android:value="2" />
     </application>
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <!--//访问电话状态-->
     <!-- <uses-permission android:name="android.permission.READ_PHONE_STATE" /> -->
     <!--//允许全部网络访问-->
