--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   # 屏幕适配
   flutter_screenutil: ^5.7.0
+  # 权限
+  permission_handler: ^10.2.0
   # 网络请求
   dio: ^5.0.1
   # 加密
@@ -51,7 +53,7 @@ dependencies:
   # 路由切换动画
   page_animation_transition: ^0.0.9
   # json序列化
-  freezed_annotation: ^2.2.0
+  # freezed_annotation: ^2.2.0
   json_annotation: ^4.5.0
   # toast弹窗
   cherry_toast: ^1.1.0
@@ -70,8 +72,9 @@ dependencies:
   # rive动画
   rive: ^0.10.3
   # 扫码
-  # mobile_scanner: ^3.1.1
+  mobile_scanner: ^3.1.1
   # flutter_scankit: ^1.2.4
+  # flutter_barcode_scanner: ^2.0.0 #ios
   # 下拉刷新
   pull_to_refresh: ^2.0.0
   # 图片选择
@@ -80,6 +83,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   # 日期格式化
   intl: ^0.18.0
+  vibration: ^1.7.6
 
 dev_dependencies:
   flutter_test:
@@ -94,7 +98,7 @@ dev_dependencies:
   # json序列化
   build_runner: ^2.3.3
   json_serializable: ^6.2.0
-  freezed: ^2.3.2
+  # freezed: ^2.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
